# ptcg-home-gym-manager

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  README.md  README_MIGRATION.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.raspi.yml  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: Q&A.yml  idea.yml  ideas.yml  q_and_a.yml  show and tell.yml  show_and_tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
cards/: admin.py  ai_analyzer.py  data_mapper.py  filters.py  forms.py  models.py  query_builder.py  resources.py  urls.py  utils.py  validation.py  views.py  widgets.py
cards/fixtures/: master_data.json
cards/migrations/: 0001_initial.py  0002_alter_evolutionstage_options_and_more.py  0003_alter_movetype_options_alter_specialfeature_options_and_more.py  0004_remove_pokemoncard_image_path_pokemoncard_image.py  0005_alter_pokemoncard_options_and_more.py  0006_movetype_bg_color_movetype_text_color_type_bg_color_and_more.py  0007_alter_pokemoncard_evolution_stage.py  0008_cardcategory.py  (+9 more)
config/: settings.py  urls.py
docs/: 00_tasks.md  10_function list.md  20_architecture.md  30_ER diagram.md  40_operations.md  40_transition diagram.md  50_github_usage.md  TERMS_AND_PRIVACY.md  pages.html
templates/: _about_modal.html  _image_preview_modal.html  _privacy_modal.html  _terms_modal.html  base.html
(+43 files in other folders)
